    - LV2: made LV2 plugin buildable on Windows and Mac

  * MIDI driver:
    - ALSA MIDI driver supports now "NAME" device parameter, for overriding
      the ALSA sequencer client name
    - removed limit of maximum amount of MIDI ports per MIDI device, since
      there is no reason for this limit
    - MME: fixed memory handling bug found with cppcheck
    - MME: removed compiler warning

  * audio driver:
    - ASIO driver fixes for newer gcc versions (fix from PortAudio)

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"
    - added LSCP command "GET AVAILABLE_EFFECTS"
    - added LSCP command "LIST AVAILABLE_EFFECTS"
    - added LSCP command "GET EFFECT INFO <effect-index>"
    - added LSCP command "CREATE EFFECT_INSTANCE <effect-index>"
    - added LSCP command
      "CREATE EFFECT_INSTANCE <effect-system> <module> <effect-name>"
    - added LSCP command "DESTROY EFFECT_INSTANCE <effect-instance>"
    - added LSCP command "GET EFFECT_INSTANCES"
    - added LSCP command "LIST EFFECT_INSTANCES"
    - added LSCP command "GET EFFECT_INSTANCE INFO <effect-instance>"
    - added LSCP command
      "GET EFFECT_INSTANCE_INPUT_CONTROL INFO <effect-instance> <input-control>"
    - added LSCP command "SET EFFECT_INSTANCE_INPUT_CONTROL VALUE
      <effect-instance> <input-control> <value>"
    - added LSCP command "GET SEND_EFFECT_CHAINS <audio-device>"
    - added LSCP command "LIST SEND_EFFECT_CHAINS <audio-device>"
    - added LSCP command "ADD SEND_EFFECT_CHAIN <audio-device>"
    - added LSCP command
      "REMOVE SEND_EFFECT_CHAIN <audio-device> <effect-chain>"
    - added LSCP command
      "GET SEND_EFFECT_CHAIN INFO <audio-device> <effect-chain>"
    - added LSCP command "APPEND SEND_EFFECT_CHAIN EFFECT <audio-device>
      <effect-chain> <effect-instance>"
    - added LSCP command "INSERT SEND_EFFECT_CHAIN EFFECT <audio-device>